samples/_failures_safe/1761375742_d567cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06d038a2.c: In function ‘main’:
./samples/SAFE/__tmp_06d038a2.c:156:17: error: expected expression at end of input
  156 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_06d038a2.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d038a2.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d038a2.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d038a2.c:156:17: error: expected declaration or statement at end of input
